Fixes z-index

--- a/app/assets/stylesheets/share.css.sass
+++ b/app/assets/stylesheets/share.css.sass
@@ -33,6 +33,7 @@
           min-width: 180px
           min-height: 140px
           background: rgba(244, 244, 244, .95)
+          z-index: 100
 
           .index
             left: -50px
